kubernetes_configs/postgresql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  labels: 
    app: psql 
    type: local
spec:
  replicas: 1
  selector:
    matchLabels:
      app: psql
      type: local
  template:
    metadata:
      labels:
        app: psql
        type: local
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - name: postgressql
        image: postgres:latest
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 5432
        resources:
          requests:
             memory: "512Mi"   # Request at least 512MB of memory
             cpu: "250m"       # Request at least 250 milliCPU (0.25 CPU core)
          limits:
             memory: "1Gi"     # Limit memory usage to 1GB
             cpu: "500m"       # Limit CPU usage to 500 milliCPU (0.5 CPU core)
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name:  psql-service-np
spec:
  selector:
    app:  psql
    type: local
  type:  NodePort
  ports:
  - name:  psql
    port:  5432
    nodePort: 30100
    protocol: TCP
